<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MeetingRoomBookingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_Meeting_Object"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Objet de la réunion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_txt_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvRoomChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Choisissez votre salle de réunion"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/spinner_room_toselect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tv_date_time_toselect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
            android:gravity="center"
            android:paddingRight="10dp"
            android:hint="Sélectionnez la date et l'heure"
            android:textStyle="bold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/button_invitation_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Inviter" />

        <TextView
            android:id="@+id/tv_list_invited"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="10dp"

            android:layout_margin="12dp"
            android:hint="liste des participants" />

        <Button
            android:id="@+id/button_save_meeting"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="enregistrer" />


    </LinearLayout>


</ScrollView>